test/functions/deitz/test_var_function1.good
Error: Assigning to a constant expression (test_var_function1.chpl:6)
